reinterpret_cast does not evaluate to constexpr https://bugs.webkit.org/show_bug.cgi?id=173622

Patch by Daewoong Jang <daewoong.jang@navercorp.com> on 2017-07-05
Reviewed by Yusuke Suzuki.

* bmalloc/Algorithm.h:
(bmalloc::mask):
(bmalloc::roundUpToMultipleOf):

Canonical link: https://commits.webkit.org/191026@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@219181 268f45cc-cd09-0410-ab3c-d52691b4dbfc